
[package]
name = "termsage"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
dotenv = "0.15"
futures = "0.3"
bytes = "1.4"
serde_json = "1.0"
colored = "2.0"
clipboard = "0.5"
crossterm = "0.26"
